subida de cambios en la parte de front, se añade el menú en todas las vistas de la aplicación y en la parte de back, se hace que se pueda eliminar un vehiculo

--- a/AUTOCAREHUB/src/app/components/invoice-viewer/invoice-viewer.component.html
+++ b/AUTOCAREHUB/src/app/components/invoice-viewer/invoice-viewer.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <div *ngIf="loading" class="text-center">Cargando facturas...</div>
 
 <div *ngIf="errorMessage" class="error text-center">{{ errorMessage }}</div>
