--- a/AUTOCAREHUB/src/app/components/home/home.component.html
+++ b/AUTOCAREHUB/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <app-menu></app-menu>
   <div class="row align-items-center">
     <div class="col-md-6">
       <img src="img/LogoNaranjaAplicacion.png" alt="" class="img-fluid">
