se hace que en vez de visualizar 1 semana para pedir las citas,salga 1 mes desde el día actual, y se restructura el PDF

--- a/AUTOCAREHUB/src/app/components/appointments-viewer/appointments-viewer.component.html
+++ b/AUTOCAREHUB/src/app/components/appointments-viewer/appointments-viewer.component.html
@@ -29,7 +29,7 @@
         <td class="px-4 py-2 border-b">{{ cita.StartDateTime | date:'dd/MM/yyyy HH:mm' }}</td>
         <td class="px-4 py-2 border-b">{{ cita.EndDateTime | date:'dd/MM/yyyy HH:mm' }}</td>
         <td class="px-4 py-2 border-b">{{ cita.Description }}</td>
-        <td class="px-4 py-2 border-b">{{ cita.Estado  || 'Pendiente' }}</td>
+        <td class="px-4 py-2 border-b">{{ cita.Status }}</td>
       </tr>
     </tbody>
   </table>
