se hace un nuevo chat, tanto en PHP, como en Angular, y se modifica la base de datos

--- a/AUTOCAREHUB/src/app/components/menu/menu.component.html
+++ b/AUTOCAREHUB/src/app/components/menu/menu.component.html
@@ -1,8 +1,7 @@
 <nav class="navbar">
     <ul class="menu">
       <li *ngFor="let route of menuRoutes">
-        <a [routerLink]="route.path">{{ route.label }}</a>
+        <a [routerLink]="route.path">{{ i18n.t(route.label) }}</a>
       </li>
     </ul>
-  </nav>
-  
+</nav>
