--- a/AUTOCAREHUB/src/app/components/home/home.component.html
+++ b/AUTOCAREHUB/src/app/components/home/home.component.html
@@ -5,8 +5,8 @@
       <img src="img/LogoNaranjaAplicacion.png" alt="" class="img-fluid">
     </div>
     <div class="col-md-6">
-      <h1 class="title">Bienvenido a AutocareHub!</h1>
-      <h2 class="subtitle">La solución para cuidar tu coche de una forma sencilla</h2>
+      <h1 class="title">{{ i18n.t('home.welcome') }}</h1>
+      <h2 class="subtitle">{{ i18n.t('home.subtitle') }}</h2>
     </div>
   </div>
 </div>
